other/add-pod-proxies/.chainsaw-test/pod-resources-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: pod01-01
    image: busybox:1.35
    env:
    - name: HTTP_PROXY
      value: http://proxy.corp.domain:8080
    - name: HTTPS_PROXY
      value: https://secureproxy.corp.domain:8080
    - name: NO_PROXY
      value: localhost,*.example.com
  - name: pod01-02
    image: busybox:1.35
    env:
    - name: HTTP_PROXY
      value: http://proxy.corp.domain:8080
    - name: HTTPS_PROXY
      value: https://secureproxy.corp.domain:8080
    - name: NO_PROXY
      value: localhost,*.example.com
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: pod02-01
    image: busybox:1.35
    env:
    - name: HTTP_PROXY
      value: http://proxy.corp.domain:8080
    - name: HTTPS_PROXY
      value: https://secureproxy.corp.domain:8080
    - name: NO_PROXY
      value: localhost,*.example.com
  - name: pod02-02
    image: busybox:1.35
    env:
    - name: HTTP_PROXY
      value: http://proxy.corp.domain:8080
    - name: HTTPS_PROXY
      value: https://secureproxy.corp.domain:8080
    - name: NO_PROXY
      value: localhost,*.example.com
    - name: FOO
      value: bar
