other/add-pod-proxies/.chainsaw-test/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: pod01-01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: pod01-02
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: pod02-01
    image: ghcr.io/kyverno/test-busybox:1.35
    env:
    - name: HTTP_PROXY
      value: http://proxy.kyverno.domain:8080
    - name: HTTPS_PROXY
      value: https://secureproxy.kyverno.domain:8080
    - name: NO_PROXY
      value: localhost,*.example.com
  - name: pod02-02
    image: ghcr.io/kyverno/test-busybox:1.35
    env:
    - name: HTTP_PROXY
      value: http://proxy.kyverno.org:8080
    - name: FOO
      value: bar
