other/add-pod-proxies/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-pod-proxies
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
